tests/NormalTests/paczka1/fuzzy1/68379557.err
Error in line 3: S663 S518 30,0
Error in line 4: S663 A918 75,8
Error in line 1: u6z1jf S518 14,3
Error in line 13: u6z1jf S663 88,8
Error in line 29: Z0h A918 76,8
Error in line 32: Z0h S263 35,7
Error in line 37: Z0h A918 66,3
